# astra-os

./: .dockerignore  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  EXECUTIVE_SUMMARY_ROADMAP.md  FINAL_HANDOFF_SIGN_OFF.md  HARDENING_ACTION_PLAN.md  HARDENING_COMPLETE.md  HARDENING_PLAN.md  LICENSE  MAINTENANCE_PLAN.md  Makefile  PRODUCTION_HANDOFF_PACKAGE.md  PRODUCTION_HARDENING_ACTION_PLAN.md  PRODUCTION_READINESS_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  add_endpoint.py  bandit-cli-report.json  bandit-final-report.json  bandit-final.json  bandit-report-new.json  bandit-report.json  check_routes.py  check_syntax.py  check_test.py  deploy.sh  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  package.json  (+17 more)
apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.worker  alembic.ini  entrypoint.py  entrypoint.sh  pyproject.toml  test.db-journal  test_integration.db-journal
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_campaigns_content.py  0003_workflows.py  0004_knowledge_graph.py  0005_advertising.py  0006_auth_security.py  0007_content_generation.py  0008_reports.py  0009_notifications.py  0010_advanced_campaigns.py  0011_content_publishing.py  0012_email.py  0013_dashboards.py  0014_multi_tenant_org.py  0015_advanced_reporting.py  0016_campaign_automation.py  0017_notification_hub.py  0018_system_monitoring.py  0019_fix_audit_logs_schema.py  0020_add_composite_indexes.py  0021_create_system_prompts.py  0022_add_foreign_keys_unique_constraints_indexes.py  0023_encrypt_sensitive_fields.py  0024_create_audit_logs.py  0025_add_partitioned_audit_outbox_embeddings.py  0026_enable_rls.py  0027_agent_orchestrator_tables.py  0028_ad_creatives_indexes.py  0029_governance_tables.py
apps/api/app/: config.py  config.py,cover  main.py  main.py,cover
apps/api/app/application/ports/: ad_platform_port.py  ad_platform_port.py,cover  ai_provider.py  ai_provider.py,cover  embedding_provider.py  embedding_provider.py,cover  repositories.py  (+1 more)
apps/api/app/domain/: common.py  common.py,cover
apps/api/app/infrastructure/: logging.py  startup.py
apps/api/app/presentation/: dependencies.py  dependencies.py,cover  error_handlers.py  error_handlers.py,cover
apps/api/tests/: conftest.py  test_design_partner.py  test_knowledge_cross_campaign.py  test_knowledge_optimization.py  test_knowledge_rag.py  test_knowledge_routes.py  test_observability.py  test_shadow_mode.py  test_social_intelligence.py  test_workflow_scheduler.py  test_workflow_templates.py  test_workflow_versioning.py
apps/api/tests/integration/: conftest.py  test_auth_integration.py  test_campaign_integration.py  test_content_gen_integration.py  test_content_integration.py  test_dashboard_integration.py  test_knowledge_integration.py  test_organization_repository.py  test_organization_v2_integration.py  test_team_integration.py  test_user_repository.py  test_workflow_integration.py
apps/api/tests/unit/: test_ad_creative_service.py  test_ad_insights.py  test_adplatform_adapters.py  test_agents.py  test_ai_providers.py  test_ai_usage_tracker.py  test_analytics_service.py  test_api_contracts.py  test_app_creation.py  test_audit_jobs.py  test_auth_redis.py  test_automation_service.py  test_bulk_campaign_service.py  test_calendar_service.py  test_campaign_domain.py  test_campaign_routes.py  test_campaign_use_cases.py  test_chat_use_case.py  test_config.py  test_content_domain.py  test_content_gen_routes.py  test_content_generation_service.py  test_content_publishing_service.py  test_csrf.py  test_dashboard_service.py  test_dashboards.py  test_delivery_adapters.py  test_email.py  test_email_service.py  test_embedding_providers.py  test_encryption.py  test_event_bus.py  test_feature_flags.py  test_graph_store.py  test_health.py  test_jwt_security.py  test_knowledge.py  test_manage_prompts_use_case.py  test_metrics.py  test_monitor_repository.py  (+29 more)
apps/cli/: pyproject.toml
apps/cli/src/astra_cli/: __init__.py  agents.py  auth.py  config.py  costs.py  main.py  monitoring.py  schemas.py  workflows.py
apps/cli/tests/: test_cli.py
services/: __init__.py  agent.py  agents.py  comms.py  events.py  governance.py  hierarchy.py  memory.py  pyproject.toml  resilience.py  setup.py
services/agent_orchestrator/: Dockerfile  README.md  __init__.py  agent.py  comms.py  dlq.py  events.py  governance.py  hierarchy.py  main.py  memory.py  package.json  pyproject.toml  registry.py  resilience.py  router.py  telemetry.py  tools.py
services/agent_orchestrator/agents/: base.py  ceo.py  director.py  specialist.py
services/agent_orchestrator/astra_agent_orchestrator/: __init__.py  agent.py  comms.py  dlq.py  events.py  governance.py  hierarchy.py  main.py  memory.py  metrics.py  resilience.py  router.py  slo.py  supervisor.py  telemetry.py  tools.py
services/agent_orchestrator/astra_agent_orchestrator/agents/: __init__.py  base.py  ceo.py  director.py  specialist.py
services/agent_orchestrator/astra_agent_orchestrator/tests/: test_agent.py  test_agent_governance.py  test_agent_rag.py  test_agent_semantic_conventions.py  test_budget_pacing.py  test_circuit_breaker.py  test_concrete_agents.py  test_dlq.py  test_events.py  test_governance.py  test_hierarchy.py  test_integration.py  test_metrics.py  test_router.py  test_supervisor.py  test_telemetry.py  test_tools.py
services/agent_orchestrator/tests/: __init__.py  __init__.py.bak  conftest.py  conftest.py.bak  test_agent.py  test_agent_governance.py  test_agent_rag.py  test_agent_semantic_conventions.py  test_budget_pacing.py  test_circuit_breaker.py  test_concrete_agents.py  test_creative_use_cases.py  test_dlq.py  test_events.py  test_governance.py  test_hierarchy.py  test_integration.py  test_lifecycle_use_cases.py  test_m2_integration.py  test_metrics.py  test_router.py  test_supervisor.py  test_telemetry.py  test_tools.py
(+902 files in other folders)
