[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-api"
version = "0.0.1"
description = "ASTRA OS — API Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.8.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.1.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.1.0,<4.1.0",
    "python-multipart>=0.0.9",
    "sentry-sdk[fastapi]>=2.10.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "prometheus-client>=0.25.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.20.0",
]
temporal = [
    "temporalio>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Docstrings - too noisy for initial CI pass
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D203", "D213", "D407", "D415",
    # ANN is too strict for initial pass
    "ANN001", "ANN002", "ANN003", "ANN101", "ANN102", "ANN201", "ANN202", "ANN204",
    "ANN205", "ANN206", "ANN401",
    # Style preferences - not errors
    "COM812", "COM819",
    # Allow assert in tests
    "S101",
    # Allow function calls in defaults (Pydantic models)
    "B008",
    # Allow magic value comparisons in tests
    "PLR2004",
    "PLR0913",
    # Import outside top-level (needed for lazy imports)
    "PLC0415",
    # Pre-existing codebase style issues - not CI-blocking
    # Can be enabled incrementally
    "FAST002", "E501", "TRY003", "EM101", "EM102", "B904",
    "ARG001", "ARG002", "INP001", "A002", "BLE001",
    "UP042", "D400", "FBT001", "S311", "B011", "PT015",
    "SLF001", "SIM102", "S105", "S106",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_unused_ignores = false
exclude = ["tests/"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
