[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-cli"
version = "0.1.0"
description = "Astra OS CLI - AI-Native Marketing & Business Growth Operating System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Astra OS Team", email = "team@astra-os.io"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.4.2",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
astra = "astra_cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["astra_cli*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["ALL"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D203", "D213", "D407", "D415",
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204",
    "ANN205", "ANN206", "ANN401",
    "COM812", "COM819",
    "B008",
    "PLR2004", "PLR0913",
    "UP042", "UP043",
    "FAST002", "FAST003",
    "INP001",
    "PT015",
]
[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"