[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-agent-orchestrator"
version = "0.1.0"
description = "Agent Orchestrator Runtime for ASTRA OS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "asyncio-redis>=0.16.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "python-json-logger>=2.0.0",
    "structlog>=23.2.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_orchestrator*"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "ALL",
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # Docstrings
    "D203", "D213", "D407", "D415",
    "ANN001", "ANN002", "ANN003", "ANN101", "ANN102", "ANN201", "ANN202", "ANN204", "ANN401",
    "COM812", "COM819",
    "B008", "BLE001",
    "PLR2004", "PLR0913",
    "UP042", "UP043",
    "FAST002", "FAST003",
    "INP001",
    "PT015",
]
[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
ignore_missing_imports = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = "services.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["services"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]